--- a/web/src/origin/ejs/pc.ejs
+++ b/web/src/origin/ejs/pc.ejs
@@ -1,12 +1,83 @@
 <!DOCTYPE html>
+
 <head>
     <title>Order Reader</title>
 </head>
 
-<body>
-    <h1>Socket Client Demo</h1>
-    Price: <input id="price" />
+<body class="socket_wrapper">
+    <div class="le_list_breadcrumb_pannel">
+        Socket Client Demo
+    </div>
+    <div class="le_list_search_pannel clearfix">
+        <div class="col4">
+            <div class="form-item">
+                <div class="form-item-label">
+                    Price:
+                </div>
+                <div class="form-item-div">
+                    <input type="text" id="price" class="form-item-input">
+                </div>
+            </div>
+
+        </div>
+    </div>
     <div id="rootContainer">
-        
+        <div class="search_box">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>
+                            customer
+                        </th>
+                        <th>
+                            destination
+                        </th>
+                        <th>
+                            event_name
+                        </th>
+                        <th>
+                            id
+                        </th>
+                        <th>
+                            item
+                        </th>
+                        <th>
+                            price
+                        </th>
+                        <th>
+                            sent_at_second
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            Sonia Reeves
+                        </td>
+                        <td>
+                            9239 Elizabeth Street Apt. 442, South Johnburgh, CA 92238
+                        </td>
+                        <td>
+                            DRIVER_RECEIVED
+                        </td>
+                        <td>
+                            af51c7ec
+                        </td>
+                        <td>
+                            Mushroom pizza
+                        </td>
+                        <td>
+                            6444
+                        </td>
+                        <td>
+                            18
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="search_loadmore">
+            <span class="asBtn loadmore">Load More</span>
+        </div>
     </div>
 </body>
