--- a/web/src/origin/ejs/pc.ejs
+++ b/web/src/origin/ejs/pc.ejs
@@ -19,7 +19,6 @@
                     <input type="text" id="price" class="form-item-input">
                 </div>
             </div>
-
         </div>
     </div>
     <div id="rootContainer">
@@ -27,53 +26,17 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>
-                            customer
-                        </th>
-                        <th>
-                            destination
-                        </th>
-                        <th>
-                            event_name
-                        </th>
-                        <th>
-                            id
-                        </th>
-                        <th>
-                            item
-                        </th>
-                        <th>
-                            price
-                        </th>
-                        <th>
-                            sent_at_second
-                        </th>
+                        <th>customer</th>
+                        <th>destination</th>
+                        <th>event_name</th>
+                        <th>id</th>
+                        <th>item</th>
+                        <th>price</th>
+                        <th>sent_at_second</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>
-                            Sonia Reeves
-                        </td>
-                        <td>
-                            9239 Elizabeth Street Apt. 442, South Johnburgh, CA 92238
-                        </td>
-                        <td>
-                            DRIVER_RECEIVED
-                        </td>
-                        <td>
-                            af51c7ec
-                        </td>
-                        <td>
-                            Mushroom pizza
-                        </td>
-                        <td>
-                            6444
-                        </td>
-                        <td>
-                            18
-                        </td>
-                    </tr>
+                <tbody id="tbody">
+                    
                 </tbody>
             </table>
         </div>
