--- a/web/src/origin/ejs/pc.ejs
+++ b/web/src/origin/ejs/pc.ejs
@@ -41,7 +41,7 @@
             </table>
         </div>
         <div class="search_loadmore">
-            <span class="asBtn loadmore">Load More</span>
+            <span id="loadmore" class="asBtn loadmore">Load More</span>
         </div>
     </div>
 </body>
